Add basic quiz form

--- a/package.json
+++ b/package.json
@@ -39,6 +39,12 @@
       "parser": "babel-eslint"
     }
   },
+  "prettier": {
+    "trailingComma": "es5",
+    "tabWidth": 2,
+    "semi": true,
+    "singleQuote": true
+  },
   "postcss": {
     "plugins": {
       "autoprefixer": {}
